[package]
name = "sren"
version = "1.0.0"
description = "A command line utility to move/copy files using instructions from standard input."
categories = ["command-line-utilities", "filesystem"]
keywords = ["tool", "rename", "move", "copy", "path"]
authors = ["Jan Pikl <pikl.jan@gmail.com>"]
repository = "https://github.com/jpikl/sren"
documentation = "https://github.com/jpikl/sren"
license = "MIT"
edition = "2021"

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
