[package]
name = "sren"
version = "1.0.0"
description = "A command line utility to move/copy files using instructions from standard input."
categories = ["command-line-utilities", "filesystem"]
keywords = ["tool", "rename", "move", "copy", "path"]
authors = ["Jan Pikl <pikl.jan@gmail.com>"]
repository = "https://github.com/jpikl/sren"
documentation = "https://github.com/jpikl/sren"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
bstr = "1.0.1"
clap = { version = "4.0.10", features = ["cargo", "derive"] }
fs_extra = "1.2.0"
once_cell = "1.14.0"
same-file = "1.0.6"
thiserror = "1.0.35"

[dev-dependencies]
assert_fs = "1.0.7"
claim = "0.5.0"
ntest = "0.8.1"
predicates = "2.1.1"
test-case = "2.2.1"
